2008-06-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* IPv6 support in devdiscover and in SNMP collector

2008-05-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/bdbinfo.in: BerkeleyDB version info utility

2008-03-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	RFC2863_IF_MIB::external-serviceid now accepts host/interface notation

2008-03-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/SQL/Reports.pm (finalize): added SQL commit

2008-03-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/collector.in: Threads are now always initialized,
	not only in daemon mode

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	New selectors: InBytesParameters, OutBytesParameters

	* perllib/Torrus/DevDiscover.pm (buildConfig):
	New discovery parameter: include-files

2008-01-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/JunOS.pm: Added interface filter to
	exclude service interfaces

	* perllib/Torrus/DevDiscover.pm, perllib/Torrus/Collector/SNMP.pm:
	snmp-max-msg-size, new parameter for SNMP session

2007-12-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoSCE.pm: New discovery parameters:
	CiscoSCE::disable-*** (Jon Nistor)

2007-11-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/defaults.xml: Default collector-timeoffset-step increased
	from 30 to 60 seconds. 30 seconds is too short for too many
	installations.

2007-11-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	New selector action: RemoveInterface

2007-09-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/JunOS.pm: Dramatic update by Jon Nistor

2007-08-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
