@@ -1,3 +1,8 @@
+2008-06-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
+	New parameter generated by IF-MIB: interface-comment
+
 2008-06-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* IPv6 support in devdiscover and in SNMP collector
